--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -4,7 +4,7 @@ one:
   title: MyString
   content: MyText
   slug: MyString
-  tag_id: 1
+  category_id: 1
   user_id: 1
   image_id: 1
 
@@ -12,6 +12,6 @@ two:
   title: MyString
   content: MyText
   slug: MyString
-  tag_id: 1
+  category_id: 1
   user_id: 1
   image_id: 1
